# Deep-Learning-for-Computer-Vision

final_project/depth-sample-codes/: rs-capture.cpp  rs-hello-realsense.cpp  rs-pointcloud.cpp
final_project/working/: CMakeLists.txt  main.cpp
hw1.ipynb/: HW1.ipynb
hw1.ipynb/__MACOSX/: ._HW1.ipynb
hw1.ipynb/raw_data/trump-or-biden/: only-trump-clean.xlsx
hw1.ipynb/raw_data/weather/: nyc-weather-cleaning.xlsx
hw1/raw_data/trump-or-biden/: combined.csv  realdonaldtrump.csv
hw1/raw_data/weather/: test-data.csv  training-data.csv
hw2/: HW2.ipynb
hw2/.ipynb_checkpoints/: HW2-checkpoint.ipynb
hw3/raw_data/: test-data.csv  training-data.csv
hw4/: HW4.ipynb  best_mlp_model.pth  best_model.pth  best_model_mlp.pth  softmax_regression_model.pth
